--- a/requirements.txt
+++ b/requirements.txt
@@ -2,8 +2,9 @@ streamlit
 Pillow
 opencv-python-headless
 easyocr
-torch
-torchvision
+torch==2.0.1
+torchvision==0.15.2
 scikit-learn
 joblib
 reportlab
+numpy
